k8s/argilla-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argilla-server-deployment
  labels:
    app: argilla-server
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: argilla-server
  template:
    metadata:
      labels:
        app: argilla-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: role
                operator: In
                values:
                - backend
      containers:
        - name: argilla-server
          image: extralit-argilla-server
          ports:
            - containerPort: 6900
          resources:
            requests:
              cpu: "0.5"
            limits:
              cpu: "1"
          volumeMounts:
            - name: elasticsearch-master-certs
              mountPath: /usr/share/elasticsearch/config/certs
      volumes:
        - name: elasticsearch-master-certs
          secret:
            secretName: elasticsearch-master-certs
      imagePullSecrets:
      - name: regcred
